# flux-analyze

./: README.md  approx_search.py  dewarp.py  kcenter.py  kmedian.py  low_level.py  mfm.py  mfm_decoder.py
csrc/: CMakeLists.txt  OPTIMIZE.txt  README.md  address_marks.cc  address_marks.h  clear_sector_files.sh  compile.sh  copy_flux.cc  crc16.cc  crc16.h  decoder.cc  design.txt  dewarp_test.cc  flux_record.cc  flux_record.h  fluxrecord.cc  fluxrecord.h  fnv_hash.h  main.cc  mfm_decoder.cc  mfmdecoder.cc  ordinal_pattern.h  ordinal_search.cc  ordinal_search.h  pll_notes.cc  preambles.cc  preambles.h  pulse_train.cc  pulse_train.h  rabin_karp.cc  rabin_karp.h  rabinkarp.cc  rabinkarp.h  rle_iterator.h  sector_data.cc  sector_data.h  timeline.cc  timeline.h  tools.cc  tools.h
csrc/check_sectors/: .gitignore  README.md
csrc/protobuf/: CMakeLists.txt
csrc/rabin_karp/: hashtable.h  rabin_karp.cc  rabin_karp.h  search_key.h
doesnt_work/: README.md  mfm_dp_dewarp.cc
python/: README.md  mfm.py  mfm_decoder.py
tracks/: MS_Plus_OK_track.au.bz2  MS_Plus_disk3_OK_track.flux  MS_Plus_disk3_warped_track.au.bz2  MS_Plus_disk3_warped_track.flux  README.md  RETRY-77-4-t69.0.au.bz2  RETRY-77-4-t69.0.flux  RETRY-77-4-t73.0.au.bz2  RETRY-77-4-t73.0.flux  amiga.au.bz2  low_level_format_with_noise.au.bz2  low_level_format_with_noise.flux
tracks/protobuf/: README.md  pb-low_level_format_with_noise.flux
tracks/test_cases/: 111_clock_failure_1.flux  111_clock_failure_2.flux  90-DDAM.flux  90_edge_AM.flux  README.md  RETRY-77-4-t69.0.flux  ff_track18.flux  x16_copying_uninitialized.flux  x33_Unknown_AM.flux
vhdl/: README.md  fd_controller.vhd  pll.txt
